[package]
name = "crypto_sentry"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# json (required)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date time (required)
chrono = { version = "0.4", features = ["serde"] }
log = {version="0.4.14"}
simplelog = "^0.10.0"


sqlx = { version = "0.5.5", features = [ "runtime-async-std-native-tls", "postgres", "macros", "chrono", "bigdecimal"] }
async-std = { version = "1.6", features = [ "attributes" ] }
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
ta = "0.5.0"
rand = "0.8.4"
dotenv = "0.15.0"
colored = "2"
bigdecimal = {version="0.2.0"}
ureq={version="2.1.1", features=["json"]}
rocket = "0.5.0-rc.1"


sha2="0.9.5"
hmac="0.11.0"
hex="0.4.3"
futures = "0.3.16"
cached="0.24.0"
dict="0.1.5"